Apache Tez Change Log
=====================

Release 0.8.5: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:

  TEZ-3009. Errors that occur during container task acquisition are not logged.
  TEZ-2852. TestVertexImpl fails due to race in AsyncDispatcher.
  TEZ-3413. ConcurrentModificationException in HistoryEventTimelineConversion for AppLaunchedEvent.
  TEZ-3352. MRInputHelpers getStringProperty() should not fail if property value is null.
  TEZ-3409. Log dagId along with other information when submitting a dag.
  TEZ-3384. Fix TestATSV15HistoryLoggingService::testDAGGroupingGroupingEnabled unit test.
  TEZ-3376. Fix groupId generation to account for dagId starting with 1.
  TEZ-3359. Add granular log levels for HistoryLoggingService.
  TEZ-3374. Change TEZ_HISTORY_LOGGING_TIMELINE_NUM_DAGS_PER_GROUP conf key name.
  TEZ-3358. Support using the same TimelineGroupId for multiple DAGs.
  TEZ-3357. Change TimelineCachePlugin to handle DAG grouping.
  TEZ-3348. NullPointerException in Tez MROutput while trying to write using Parquet's DeprecatedParquetOutputFormat.
  TEZ-3356. Fix initializing of stats when custom ShuffleVertexManager is used.
  TEZ-3329. Tez ATS data is incomplete for a vertex which fails or gets killed before initialization.
  TEZ-3235. Modify Example TestOrderedWordCount job to test the IPC limit for large dag plans.
  TEZ-3337. Do not log empty fields of TaskAttemptFinishedEvent to avoid confusion.
  TEZ-1248. Reduce slow-start should special case 1 reducer runs.
  TEZ-3370. Tez UI: Display the log link as N/A if the app does not provide a log link
  TEZ-3398. Tez UI: Bread crumb link to Application from Application details dag/configuration tab is broken

Release 0.8.4: 2016-07-08

INCOMPATIBLE CHANGES

ALL CHANGES:

  TEZ-3323. Update licese and notice for xml-apis jar. Also update year in notice to 2016.
  TEZ-3223. Support a NullHistoryLogger to disable history logging if needed.