@@ -54,6 +54,7 @@ import org.apache.tez.common.ContainerTask;
 import org.apache.tez.common.TezCommonUtils;
 import org.apache.tez.common.TezLocalResource;
 import org.apache.tez.common.TezTaskUmbilicalProtocol;
+import org.apache.tez.common.TezUtils;
 import org.apache.tez.common.TezUtilsInternal;
 import org.apache.tez.common.counters.Limits;
 import org.apache.tez.common.security.JobTokenIdentifier;
@@ -501,6 +502,14 @@ public class TezChild {
     Credentials credentials = UserGroupInformation.getCurrentUser().getCredentials();
 
     HadoopShim hadoopShim = new HadoopShimsLoader(defaultConf).getHadoopShim();
+
+    // log the system properties
+    if (LOG.isInfoEnabled()) {
+      String systemPropsToLog = TezUtils.getSystemPropertiesToLog(defaultConf);
+      if (systemPropsToLog != null) {
+        LOG.info(systemPropsToLog);
+      }
+    }
 
     TezChild tezChild = newTezChild(defaultConf, host, port, containerIdentifier,
         tokenIdentifier, attemptNumber, localDirs, System.getenv(Environment.PWD.name()),
